--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       height: 100%;
       pointer-events: none;
       overflow: hidden;
+      z-index: 0; /* keep background elements behind */
     }
 
     .star {
@@ -57,33 +58,38 @@
       100% { transform: translateY(-10vh) scale(1.5); opacity: 0; }
     }
 
+    .message, .valentine, .buttons, .result {
+      position: relative;
+      z-index: 1; /* keep text/buttons above hearts */
+    }
+
     .message {
-      margin-top: 15vh;
-      font-size: 1.2em;
-      padding: 0 20px;
-      line-height: 1.6em;
+      margin-top: 8vh; /* shifted upward */
+      font-size: 1em;  /* smaller text for mobile */
+      padding: 0 15px;
+      line-height: 1.4em;
       font-weight: normal;
     }
 
     .valentine {
-      margin-top: 40px;
+      margin-top: 30px;
       font-family: 'Poppins', sans-serif;
     }
 
     .valentine h1 {
-      font-size: 2em;
+      font-size: 1.8em;
       font-weight: normal;
       color: #ffcccc;
     }
 
     .valentine p {
-      font-size: 1em;
+      font-size: 0.95em;
       color: #ffe6e6;
       font-weight: normal;
     }
 
     .buttons {
-      margin-top: 30px;
+      margin-top: 20px;
       display: flex;
       flex-direction: row;
       justify-content: center;
@@ -112,13 +118,14 @@
     }
 
     .result {
-      margin-top: 40px;
-      font-size: 1.5em;
+      margin-top: 20px;
+      font-size: 1.3em;
       font-weight: normal;
       color: #ffccff;
       display: none;
       line-height: 1.5em;
       animation: fadeIn 1s forwards;
+      text-align: center;
     }
 
     @keyframes fadeIn {
@@ -146,10 +153,10 @@
 
     /* Mobile adjustments for Android/iOS */
     @media (max-width: 768px) {
-      .message { font-size: 1em; line-height: 1.4em; padding: 0 15px; }
+      .message { margin-top: 5vh; font-size: 0.9em; line-height: 1.4em; }
       .valentine h1 { font-size: 1.4em; }
       .valentine p { font-size: 0.9em; }
-      .result { font-size: 1.2em; }
+      .result { font-size: 1.1em; }
       .buttons { flex-direction: column; align-items: center; }
       button { width: 80%; font-size: 1em; padding: 10px 18px; }
       .teddy { font-size: 2.2em; }
@@ -164,6 +171,7 @@
     My dearest Bharat,<br><br>
     In just these two short months, you’ve quietly become my safest place, my favorite thought, and the calm I never knew I was searching for. Every smile of yours feels like home, every conversation like a memory I want to relive forever, and every moment with you reminds me how extraordinary love can feel when it’s real.<br><br>
     You walked into my life and somehow turned ordinary days into something magical, something softer, something warmer. I don’t want a future where you’re just a part of my story — I want you to be the story itself.<br><br>
+    So today, and on every Valentine that follows, I choose you with my whole heart, with all the love I have, and with every tomorrow I dream of.
   </div>
 
   <div class="valentine">
