--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <!-- Viewport for smooth mobile scaling -->
+  <!-- Viewport  -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <title>Valentine for Bharat</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
@@ -10,7 +10,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #0b3d2e; /* deepest bottle green */
+      background-color: #0b3d2e; /*  green */
       overflow-x: hidden;
       font-family: 'Poppins', sans-serif;
       color: white;
@@ -157,7 +157,7 @@
 
   <div class="message">
     My dearest Bharat,<br><br>  
-    In just these two short months, you’ve become my favorite niga! You're the smartest shorty I've ever come across. Niga you did steal my heart bro? I mean, its magical as fuckkkk. Can you believe how close we've become in 2 tiny months?<br><br>
+    In just these two short months, you’ve become my favorite boy! You're the smartest shorty I've ever come across. Well, nigga you did steal my heart bro? I mean, its magical as fuckkkk. Can you believe how close we've become in 2 tiny months?<br><br>
     But honestly man, I need you to know how special you are. Okay lets put it this way - I'd eat lauki for you everyday for the rest of my life.<br><br>
     So today, and on every Valentine that follows, I choose you with my whole heart, with all the love I have, and with every tomorrow I dream of.
   </div>
